--- a/RTClient/View/LoginView.xaml
+++ b/RTClient/View/LoginView.xaml
@@ -4,6 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RTClient.View"
+        xmlns:viewModel="clr-namespace:RTClient.ViewModel" 
+        xmlns:customcontrols="clr-namespace:RTClient.CustomControls"
         mc:Ignorable="d"
         Title="LoginView" Height="550" Width="800"
         WindowStyle="None"
@@ -12,6 +14,18 @@
         Background="Transparent"
         AllowsTransparency="True"
         MouseDown="Window_MouseDown">
+
+    <Window.DataContext>
+        <viewModel:LoginViewModel/>
+    </Window.DataContext>
+
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibility"/>
+    </Window.Resources>
+
+    <Window.Visibility>
+        <Binding Path="IsViewVisible" Mode="TwoWay" Converter="{StaticResource BooleanToVisibility}"/>
+    </Window.Visibility>
 
     <Border CornerRadius="12">
         
@@ -145,6 +159,7 @@
                                Margin="0,30,0,0"/>
 
                     <TextBox x:Name="txtUser"
+                             Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
                              FontSize="13"
                              FontWeight="Medium"
                              FontFamily="Montserrat"                            
@@ -171,38 +186,31 @@
                                FontFamily="Montserrat"                             
                                Margin="0,15,0,0"/>
 
-                    <PasswordBox x:Name="txtPass"
-                             FontSize="13"
-                             FontWeight="Medium"
-                             FontFamily="Montserrat"                            
-                             Foreground="White"
-                             CaretBrush="LightGray"
-                             BorderBrush="DarkGray"
-                             BorderThickness="0,0,0,2"
-                             Height="28"
-                             VerticalContentAlignment="Center"
-                             Margin="0,5,0,0"
-                             Padding="20,0,0,0">
+                    <customcontrols:BindablePasswordBox Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                        Height="28"                            
+                                                        Margin="0,5,0,0">
+                    </customcontrols:BindablePasswordBox>
 
-                        <PasswordBox.Background>
-                            <ImageBrush ImageSource="/Images/key-icon.png"
-                                        Stretch="None"
-                                        AlignmentX="Left"/>
-                        </PasswordBox.Background>
-                    </PasswordBox>
-
-                    <StackPanel Margin="0,50,0,0"
+                    <TextBlock Text="{Binding ErrorMessage}"
+                               Foreground="#D7596D"
+                               FontSize="12"
+                               FontWeight="Medium"
+                               FontFamily="Montserrat"                             
+                               Margin="0,10,0,0"
+                               TextWrapping="Wrap"/>
+                    
+                    <StackPanel Margin="0,30,0,0"
                                 Orientation="Horizontal"
                                 HorizontalAlignment="Center">
 
-                        <Button x:Name="btnLogin"                          
+                        <Button x:Name="btnLogin" 
+                                Command="{Binding LoginCommand}"
                                 BorderThickness="0"
                                 Content="Войти"
                                 Foreground="White"
                                 FontSize="12"
                                 FontFamily="Montserrat"
-                                Cursor="Hand"
-                                Click="btnLogin_Click">
+                                Cursor="Hand">
                             <Button.Style>
                                 <Style TargetType="Button">
                                     <Setter Property="Background" Value="#462AD8"/>
