Added alernative logining and signin up

--- a/RTClient/View/LoginView.xaml
+++ b/RTClient/View/LoginView.xaml
@@ -259,7 +259,7 @@
 
                     <Button x:Name="btnSignIn"                          
                             BorderThickness="0"
-                            Content="Зарегистрироваться"
+                            Content="Регистрация"
                             Foreground="White"
                             FontSize="12"
                             FontFamily="Montserrat"
