--- a/RTClient/View/AltLoginView.xaml
+++ b/RTClient/View/AltLoginView.xaml
@@ -147,13 +147,13 @@
                     <ComboBox x:Name="comboOrg"
                          FontSize="13"
                          FontWeight="Medium"
-                         Foreground="White"
+                         Foreground="Black"
                          BorderBrush="DarkGray"
                          BorderThickness="0,0,0,2"
                          Height="28"
                          VerticalContentAlignment="Center"
                          Margin="0,5,0,0"
-                         Padding="20,0,0,0">
+                         Padding="20,0,0,0" SelectionChanged="comboOrg_SelectionChanged">
                     </ComboBox>
 
                     <TextBlock Text="Логин"
@@ -167,7 +167,8 @@
                         FontSize="13"
                         FontWeight="Medium"
                         FontFamily="Montserrat"                            
-                        Foreground="White"
+                        Foreground="Black"
+                      
                                 
                         BorderThickness="0,0,0,2"
                         Height="28"
@@ -271,7 +272,7 @@
 
                     <Button x:Name="btnSignIn"                          
                         BorderThickness="0"
-                        Content="Зарегистрироваться"
+                        Content="Регистрация"
                         Foreground="White"
                         FontSize="12"
                         FontFamily="Montserrat"
