--- a/RTClient/App.xaml
+++ b/RTClient/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="RTClient.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:RTClient"
-             StartupUri="View/LoginView.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+             xmlns:local="clr-namespace:RTClient">
+	<Application.Resources>
+
+	</Application.Resources>
 </Application>
