--- a/RTClient/View/SignUpView.xaml
+++ b/RTClient/View/SignUpView.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:RTClient.View"
         mc:Ignorable="d"
         Title="LoginView" Height="550" Width="800"
+        Icon="/Images/win_logo.png"
         WindowStyle="None"
         ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
@@ -171,8 +172,7 @@
                                BorderThickness="0,0,0,2"
                                Height="28"
                                VerticalContentAlignment="Center"
-                               Margin="0,5,0,0"
-                               Padding="20,0,0,0">
+                               Margin="0,5,0,0">
                     </TextBox>
 
                     <TextBlock Text="Имя"
@@ -193,8 +193,7 @@
                                BorderThickness="0,0,0,2"
                                Height="28"
                                VerticalContentAlignment="Center"
-                               Margin="0,5,0,0"
-                               Padding="20,0,0,0">
+                               Margin="0,5,0,0">
                     </TextBox>
 
                     <TextBlock Text="Отчество"
@@ -215,8 +214,7 @@
                                BorderThickness="0,0,0,2"
                                Height="28"
                                VerticalContentAlignment="Center"
-                               Margin="0,5,0,0"
-                               Padding="20,0,0,0">
+                               Margin="0,5,0,0">
                     </TextBox>
 
 
@@ -238,8 +236,7 @@
                                BorderThickness="0,0,0,2"
                                Height="28"
                                VerticalContentAlignment="Center"
-                               Margin="0,5,0,0"
-                               Padding="20,0,0,0">
+                               Margin="0,5,0,0">
                     </TextBox>
 
                     <TextBlock Text="Пароль"
@@ -260,8 +257,7 @@
                                  BorderThickness="0,0,0,2"
                                  Height="28"
                                  VerticalContentAlignment="Center"
-                                 Margin="0,5,0,0"
-                                 Padding="20,0,0,0">
+                                 Margin="0,5,0,0">
                     </PasswordBox>
 
                     <StackPanel Margin="0,20,0,0"
